# nutrition

./: .gitignore  .gitmodules  .travis.yml  .travis.yml.swp  Cargo.toml  README.md  diesel.toml
assets/: nutrition.csv  nutritionix-example.json
assets/ui/: package-lock.json  package.json  webpack.config.js
assets/ui/src/: app.js  counter-button.js  datetime.js  index.js  styles.scss  useState.js
assets/ui/src/edit-meal/: index.js  index.module.scss
database_migrations/: add_primary_keys.sql  not_nulls.sql
migrations/2021-06-08-191934_initialize_foods/: down.sql  up.sql
src/: env.rs  lib.rs  main.rs  nutritionix.rs  quantities.rs  schema.rs  si.rs
src/db/: api.rs  mod.rs  orm.rs  pg.rs  test.rs
src/fdc/: api.rs  mod.rs  test.rs
src/service/: mod.rs  rest.rs  ui.rs
