[package]
name = "nutrition"
version = "0.0.0"
authors = ["Matthew Varble <mrvarble@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
dotenv = "0.15.0"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1.8.1", features = ["rt", "macros"] }
uom = "0.31.1"
