[package]
name = "nutrition"
version = "0.0.0"
authors = ["Matthew Varble <mrvarble@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3.3.2", features = ["openssl"] }
anyhow = "1.0.41"
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
derive_more = "0.99.16"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
itertools = "0.10.1"
lazy_static = "1.4.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
uom = "0.31.1"

[dev-dependencies]
actix-rt = "1"
